integrate bigroom (first checkin)