@@ -51,6 +51,17 @@
         </artifact:mvn>
     </target>
 
+<target name="tomcat-demo" depends="start-db">
+	<echo message="hey, tomcat" />
+    <delete dir="war/WEB-INF/lib"/>
+    <artifact:mvn mavenHome="${maven.home}" fork="true" 
+    jvmargs="-DbroadleafCoreDirectory=${broadleafCoreDirectory} -DbroadleafWorkspaceDirectory=${broadleafWorkspaceDirectory} -XX:MaxPermSize=256M -Xmx512M">
+        <arg value="compile"/>
+        <arg value="war:exploded"/>
+        <arg value="tomcat7:run-war"/>
+    </artifact:mvn>
+</target>
+
     <target name="jetty-demo-jrebel" depends="start-db">
         <delete dir="war/WEB-INF/lib"/>
         <artifact:mvn mavenHome="${maven.home}" fork="true">
